# nvidia-ovrtx-usd-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: check_env.py  render_test.py  test_upload.py  test_upload_and_load.py  test_wrapper.py  test_ws_client.py
src/rtx_viewer/: __init__.py  renderer.py  server.py
src/rtx_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
usd_samples/: cube_stacks_scene.usda  robot-ovrtx.usda
web/: app.js  index.html  style.css
