[project]
name = "rtx-viewer"
version = "0.1.0"
description = "Real-time browser-based USD viewer using NVIDIA ovrtx."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139",
    "uvicorn>=0.49",
    "websockets>=16",
    "python-multipart>=0.0.9",
    "pillow>=12",
    "numpy>=2",
    "ovrtx>=0.3.0.312915",
]

[project.optional-dependencies]
ovrtx = ["ovrtx>=0.3"]

[project.scripts]
rtx-viewer = "rtx_viewer.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
